--- a/PopularMoviesStage1/app/src/main/res/layout/activity_fragment.xml
+++ b/PopularMoviesStage1/app/src/main/res/layout/activity_fragment.xml
@@ -3,28 +3,16 @@
 <android.support.design.widget.CoordinatorLayout
     android:id="@+id/snackBarCoordinatorLayout"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@android:color/holo_green_dark">
+    android:layout_height="match_parent">
 
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/holo_red_dark">
+    android:id="@+id/activityFragment">
 
 
-    <TextView
-        android:id="@+id/tv_error_message_display"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:padding="16dp"
-        android:text=" An error has occurred. Please try again by clicking REFRESH SNACK BAR"
-        android:textSize="20sp"
-        android:visibility="invisible" />
     <ProgressBar
         android:id="@+id/pb_loading_indicator"
         android:layout_height="42dp"
@@ -42,16 +30,9 @@
         android:verticalSpacing="10dp"
         android:horizontalSpacing="10dp"
         android:stretchMode="columnWidth"
+        android:layout_gravity="center"
         android:gravity="center"
-        android:background="#37AEE4"
-         /> -->
-    <!--
-        <ListView
-            android:id="@+id/listview_flavor"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="#37AEE4"
-            /> -->
-
+        android:background="#FFFDF3"
+         />
 </RelativeLayout>
 </android.support.design.widget.CoordinatorLayout>
