--- a/PopularMoviesStage1/app/src/main/res/layout/grid_item_movie.xml
+++ b/PopularMoviesStage1/app/src/main/res/layout/grid_item_movie.xml
@@ -11,14 +11,18 @@
     <!--This image view will contain the thumbnail of the movie -->
     <ImageView
         android:id="@+id/grid_item_poster"
-        android:layout_width="wrap_content"
-        android:layout_height="28dp" />
+        android:layout_width="80dp"
+        android:layout_height="160dp"
+        android:gravity="center"
+        android:layout_gravity="center"
+        android:contentDescription="@string/image_description"/>
 
     <!--This text view will contain the title of the movie-->
     <TextView
         android:id="@+id/title_textView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Prueba"
-        android:background="@android:color/black"/>
+        android:textColor="#7792AB"
+        android:textStyle="bold"
+        android:gravity="center"/>
 </LinearLayout>
